# enigma-dev

./: -  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .install  .travis.yml  .yamllint  CMakeCache.txt  CMakeLists.txt  Config.mk  Default.mk  Install MacPorts First.webloc  Install Xcode First.webloc  LateralGM-Windows-i686.xml  LateralGM-Windows-x86_64.xml  Makefile  PKGBUILD  README.md  Readme.md  Resources.rc  STIGMA-Debian-Install.sh  STIGMA-Debian-Uninstall.sh  STIGMA-DragonFlyBSD-Install.sh  STIGMA-FreeBSD-Install.sh  STIGMA-FreeBSD-Uninstall.sh  STIGMA-Installer-i686.nsi  STIGMA-Installer-x64.nsi  STIGMA-Installer-x86.nsi  STIGMA-Installer-x86_64.nsi  STIGMA-MacOSX-Install.sh  STIGMA-MacOSX-Uninstall.sh  STIGMA-MidnightBSD-Install.sh  STIGMA-OpenBSD-Install.sh  STIGMA-OpenBSD-Uninstall.sh  STIGMA-Ubuntu-Install.sh  STIGMA-Ubuntu-Uninstall.sh  STIGMA.cpp  STIGMA.sh  Unix.mk  (+52 more)
CommandLine/emake/: 3FG.cpp  3FG.hpp  CMakeLists.txt  EnigmaCallbacks.cpp  EnigmaCallbacks.hpp  EnigmaPlugin.cpp  EnigmaPlugin.hpp  Game.cpp  Game.hpp  Main.cpp  Main.hpp  Makefile  OptionsParser.cpp  OptionsParser.hpp  Proto2ES.cpp  Proto2ES.h  SOG.cpp  SOG.hpp  Server.cpp  Server.hpp
CommandLine/gm2egm/: CMakeLists.txt  Makefile  main.cpp
CommandLine/libAssets/: CMakeLists.txt  Makefile  assets.cpp  assets.h
CommandLine/libEGM/: Building.md  CMakeLists.txt  Makefile  action.cpp  action.h  egm-events.cpp  egm-events.h  egm-read.cpp  egm-rooms.cpp  egm-rooms.h  egm-write.cpp  egm.cpp  egm.h  event.cpp  event.h  file-format.cpp  file-format.h  filesystem.cpp  filesystem.h  gmk.cpp  gmk.h  gmx.cpp  gmx.h  serialisation.cpp  serialization-helpers.cpp  serialization-helpers.h  sog.cpp  sog.h  svg-d.cpp  svg-d.h  tmx.cpp  tmx.h  tsx.cpp  tsx.h  yyp.cpp  yyp.h
CommandLine/protos/: Action.proto  Background.proto  Building.md  CMakeLists.txt  Font.proto  Include.proto  Makefile  Object.proto  Room.proto  Script.proto  Settings.proto  SettingsLinux.proto  SettingsMacOSX.proto  SettingsWindows.proto  Shader.proto  Sprite.proto  game.proto  options.proto  project.proto  server.proto  treenode.proto
CommandLine/testing/: CMakeLists.txt  CommonTest.hpp  EnigmaBot-GitHub.sh  GTestMain.cpp  GitHub-ImageDiff.sh  Makefile  SanityCheck.cpp  SmallTests.cpp  TestHarness.hpp  Utility.hpp  common_test.hpp  main.cpp
CompilerSource/: CMakeLists.txt  CompileEGMf.cbp  CompileEGMf.cbp.cbTemp  CompileEGMf.depend  CompileEGMf.layout  CompileEGMf.layout.cbTemp  INSTALL  Makefile  Makefile32  OS_Switchboard.h  Proto2ES.cpp  Proto2ES.h  Stupidity_buffer  checkfile.cpp  checkfile.h  compile.cpp  compile.h  config.h  consts.txt  darray.h  enigma.h  externs.h  filter_args.cpp  frontend.cpp  frontend.h  genmake.sh  globals.txt  load_gnames.cpp  load_gnames.h  lodepng.h  main.cpp  main.h  makedir.cpp  makedir.h  makefile  parser.cpp  parser.h  parser_components.cpp  parser_components.h  settings.cpp  (+17 more)
CompilerSource/CompileEGMf/: CompileEGMf.cbp  CompileEGMf.depend  CompileEGMf.layout
CompilerSource/JDI/: .gitignore  CMakeLists.txt  Doxyfile  JustDefineIt.cbp  README.md  azure-pipelines.yml
CompilerSource/assend/: Background.pb.cc  Background.pb.h  Background.proto  Image.proto
CompilerSource/backend/: Actions2Code.h  EnigmaCallbacks.h  EnigmaStruct.c  EnigmaStruct.h  GameData.cpp  GameData.h  JavaCallbacks.cpp  JavaCallbacks.h  JavaStruct.h  ideprint.cpp  ideprint.h
CompilerSource/backendflat/: Background.fbs  Background_generated.h
CompilerSource/cfile_parse/: auxilary.h  auxilary_gml.h  cfile_parse.cbp  cfile_parse.cpp  cfile_parse.h  cfile_parse_calls.h  cfile_parse_constants.h  cfile_parse_macros.cpp  cfile_pushing.cpp  cfile_pushing.h  cparse_shared.cpp  cparse_shared.h  cpmain.cpp  expev_macros.h  expression_evaluator.cpp  expression_evaluator.h  expression_evaluator_settings.h  externs.h  handle_letters.cpp  handle_letters.h  implicit_stack.h  keyword_operator.cpp  macro_functions.cpp  macro_functions.h  main.cpp  parsein.h  skipping.cpp  template_handlers.cpp  template_handlers.h  type_resolver.cpp  type_resolver.h  value.h
CompilerSource/compiler/: compile.cpp  compile.h  compile_common.cpp  compile_common.h  compile_includes.cpp  compile_includes.h  compile_organization.h  event_ids.h  jdi_utility.cpp  jdi_utility.h  license_string.h  output_locals.cpp  output_locals.h
CompilerSource/externs/: ext_iteration.cpp  externs.cpp  externs.h  references.cpp  references.h
CompilerSource/filesystem/: file_find.cpp  file_find.h
CompilerSource/gcc_interface/: gcc_backend.cpp  gcc_backend.h
CompilerSource/general/: bettersystem.cpp  bettersystem.h  darray.cpp  darray.h  estring.cpp  estring.h  implicit_stack.h  macro_integration.cpp  macro_integration.h  parse_basics.h  parse_basics_old.h  string.cpp  textfile.cpp  textfile.h
CompilerSource/ipc/: .gitignore  Background.fbs  Font.fbs  Image.fbs  Makefile  Path.fbs  Project.fbs  Shader.fbs  Sound.fbs  Sprite.fbs  Timeline.fbs  gmx.cpp  gmx.hpp
CompilerSource/languages/: lang_CPP.cpp  lang_CPP.h  language_adapter.cpp  language_adapter.h
CompilerSource/parser/: collect_variables.cpp  collect_variables.h  edl_vector.cpp  lex_edl.cpp  lex_edl.h  object_storage.cpp  object_storage.h  parse_edl.cpp  parse_edl.h  parse_edl_operator.cpp  parse_edl_operator.h  parser.cpp  parser.h  parser_components.cpp  parser_components.h  precedence.cpp  precedence.h
CompilerSource/parsing/: ast.cpp  ast.h  declarator.cpp  declarator.h  error_reporting.h  full_type.cpp  full_type.h  language_frontend.h  lexer.cpp  lexer.h  macros.cpp  macros.h  parser.cpp  parser.h  precedence.cpp  precedence.h  pretty_printer.cpp  tokens.cpp  tokens.h
CompilerSource/settings-parse/: crawler.cpp  crawler.h  eyaml.cpp  eyaml.h  parse_ide_settings.cpp  parse_ide_settings.h  settings.cpp  settings.h
ENIGMAsystem/SHELL/: Makefile  (+14 more)
newtree/: .gitattributes  .gitignore  CMakeLists.txt
shared/: AssetEnum.h  BuildFlags.cmake  CMakeLists.txt  FindEGMDeps.cmake  FindProtobufDeps.cmake  Makefile  darray.h  enigma_strings.h  proto_util.h  rect.h  strings_util.h  tempfix.h  texture.h
(+3998 files in other folders)
